# usign

./: .gitignore  CMakeLists.txt  README  base64.c  base64.h  ed25519.c  ed25519.h  edsign.c  edsign.h  f25519.c  f25519.h  fprime.c  fprime.h  main.c  sha512.c  sha512.h
